--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,18 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'jacoco'
 
 group = 'io.tripled'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		html.enabled true
+	}
+}
 
 repositories {
 	mavenCentral()
