--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,10 @@ build:
   variables:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false"
   stage: build
-  script: GRADLE_USER_HOME=`pwd`/.gradle ./gradlew --build-cache assemble jacocoTestReport
+  script: 
+    - GRADLE_USER_HOME=`pwd`/.gradle ./gradlew --build-cache assemble jacocoTestReport
+    - cat build/reports/jacoco/test/html/index.html | grep Total # coverage
+  coverage: /Total.*?([0-9]{1,3})%/
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
