change cache key/policy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,7 @@ build:
     - cat build/reports/jacoco/test/html/index.html | grep Total # coverage
   coverage: /Total.*?([0-9]{1,3})%/
   cache:
-    key: "$CI_COMMIT_REF_NAME"
-    policy: push
+    key: "gonzalez"
     paths:
       - build
       - .gradle
