--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ build:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false"
   stage: build
   script: 
-    - gradle --build-cache assemble check jacocoTestReport
+    - gradle --build-cache --scan assemble check jacocoTestReport
     - cat build/reports/jacoco/test/html/index.html | grep Total # coverage
   coverage: /Total.*?([0-9]{1,3})%/
   cache:
