--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ jacocoTestReport {
 	}
 }
 
+buildScan { termsOfServiceUrl = "https://gradle.com/terms-of-service"; termsOfServiceAgree = "yes" }
+
 repositories {
 	mavenCentral()
 	jcenter()
