--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.10'
+		kotlinVersion = '1.3.11'
 		springBootVersion = '2.1.2.RELEASE'
+		junitVersion = '5.3.2'
 	}
 	repositories {
 		mavenCentral()
@@ -37,6 +38,10 @@ repositories {
 	jcenter()
 }
 
+configurations.all {
+	exclude group: 'junit'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -52,6 +57,10 @@ dependencies {
 	testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:5.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+
+	testCompile("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+	testCompile("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
+	testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
 
 compileKotlin {
