--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ deploy:
   script:
     - echo "$CI_REGISTRY_IMAGE"
     - apt-get update && apt-get install --no-install-recommends --yes curl
-    - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl -O /usr/bin/
+    - curl -L https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl -o /usr/bin/
     - chmod a+x /usr/bin/kubectl
     - kubectl get nodes
     - kubectl get sa default
