label it so that we have 1 environment that provides feedback

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,9 @@ deploy:
   image: gcr.io/triggermesh/tm:v0.0.8
   only:
     - master
-  environment: production
+  environment: 
+    name: production
+    url: https://poker.otd.rotate-it.be
   script:
     - echo "$CI_REGISTRY_IMAGE"
     - apt-get update && apt-get install --no-install-recommends --yes curl
