--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ deploy:
     url: https://poker.otd.rotate-it.be
   script:
     - echo "$CI_REGISTRY_IMAGE"
+    - echo "$CI_ENVIRONMENT_SLUG"
     - apt-get update && apt-get install --no-install-recommends --yes curl
     - curl -L https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl -o /usr/bin/kubectl
     - chmod a+x /usr/bin/kubectl
