--- a/src/main/resources/k8s/poker.yaml
+++ b/src/main/resources/k8s/poker.yaml
@@ -11,6 +11,7 @@ spec:
       labels:
         app: production
         release: production
+        track: stable
       annotations:
         prometheus.io/path: "/actuator/prometheus"
         prometheus.io/port: "8081"
