--- a/src/main/resources/k8s/poker.yaml
+++ b/src/main/resources/k8s/poker.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: poker
+  labels:
+    app: production
+    release: production
+    track: stable
 spec:
   selector:
     matchLabels:
