make sure it redeploys by using the commithash in the yaml

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ jacocoTestReport {
 	}
 }
 
-buildScan { termsOfServiceUrl = "https://gradle.com/terms-of-service"; termsOfServiceAgree = "yes" }
+//buildScan { termsOfServiceUrl = "https://gradle.com/terms-of-service"; termsOfServiceAgree = "yes" }
 
 repositories {
 	mavenCentral()
