--- a/src/main/resources/k8s/poker.yaml
+++ b/src/main/resources/k8s/poker.yaml
@@ -6,6 +6,7 @@ metadata:
     app: production
     release: production
     track: stable
+    commit: commithash
 spec:
   selector:
     matchLabels:
