--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,14 +41,13 @@ deploy:
     name: production
     url: https://poker.otd.rotate-it.be
   script:
-    - echo "$CI_REGISTRY_IMAGE"
-    - echo "$CI_ENVIRONMENT_SLUG"
     - apt-get update && apt-get install --no-install-recommends --yes curl
     - curl -L https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl -o /usr/bin/kubectl
     - chmod a+x /usr/bin/kubectl
     - kubectl get nodes
     - kubectl get sa default
     - tm -n "$KUBE_NAMESPACE" set registry-auth gitlab-registry --registry "$CI_REGISTRY" --username "$DEPLOY_USER" --password "$DEPLOY_KEY"
+    - sed -i "s|commithash|$CI_COMMIT_SHA|" src/main/resources/k8s/poker.yaml
     - kubectl --namespace="$KUBE_NAMESPACE" apply -f src/main/resources/k8s/poker.yaml
 #    - tm -n "$KUBE_NAMESPACE" --registry-host "$CI_REGISTRY_IMAGE" deploy --wait
 #    - tm -n "$KUBE_NAMESPACE" --config "$KUBECONFIG" deploy service "$CI_PROJECT_NAME" --from-image "$CI_REGISTRY_IMAGE" --wait
