--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,7 @@ dependencies {
 	implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.3.1'
 	implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:5.3.1'
 	implementation 'com.graphql-java-kickstart:voyager-spring-boot-starter:5.3.1'
+	implementation 'com.expedia:graphql-kotlin:0.0.34'
 
 	// testing facilities
 	testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:5.3.1'
