move to graalvm, because we can!

--- a/src/main/resources/quality/detekt.yml
+++ b/src/main/resources/quality/detekt.yml
@@ -51,3 +51,7 @@ style:
     maxLineLength: 200
   ReturnCount:
     active: false
+  NewLineAtEndOfFile:
+    active: false
+  FunctionOnlyReturningConstant:
+    active: false
