--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,5 +49,8 @@ deploy:
     - tm -n "$KUBE_NAMESPACE" set registry-auth gitlab-registry --registry "$CI_REGISTRY" --username "$DEPLOY_USER" --password "$DEPLOY_KEY"
     - sed -i "s|commithash|$CI_COMMIT_SHA|" src/main/resources/k8s/poker.yaml
     - kubectl --namespace="$KUBE_NAMESPACE" apply -f src/main/resources/k8s/poker.yaml
+    - echo "hacky redeploy force tricky"
+    - kubectl --namespace=poker-265 scale deployment.apps/poker --replicas=0
+    - kubectl --namespace=poker-265 scale deployment.apps/poker --replicas=1
 #    - tm -n "$KUBE_NAMESPACE" --registry-host "$CI_REGISTRY_IMAGE" deploy --wait
 #    - tm -n "$KUBE_NAMESPACE" --config "$KUBECONFIG" deploy service "$CI_PROJECT_NAME" --from-image "$CI_REGISTRY_IMAGE" --wait
