--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ configurations.all {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
@@ -76,11 +77,11 @@ dependencies {
 	implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:5.3.1'
 	implementation 'com.graphql-java-kickstart:voyager-spring-boot-starter:5.3.1'
 	implementation 'com.expedia:graphql-kotlin:0.0.34'
-
+	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	
 	// testing facilities
 	testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:5.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 
 	testCompile("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
 	testCompile("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
