--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ gradle build:
   variables:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true"
   script:
-    - gradle --build-cache --scan assemble check jacocoTestReport detekt
-    - cat build/reports/jacoco/test/html/index.html | grep Total # coverage
-  coverage: /Total.*?([0-9]{1,3})%/
+    - gradle --build-cache --scan assemble check coverage detekt
+    - 'cat ''build/reports/jacoco/coverage/html/index.html'' | sed -n ''s/.*Total[^%]*>\([0-9]*%\).*/Coverage: \1/pg'''
+  coverage: /Coverage[^0-9]*([0-9]{1,3})%/
   artifacts:
     paths:
       - build/libs/*.jar
