--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
 rootProject.name = 'poker'
+include 'app'
+include 'infra-businessmetrics'
+include 'infra-mongostore'
+include 'infra-graphql'
+include 'main'
