--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ gradle build:
   coverage: /Coverage[^0-9]*([0-9]{1,3})%/
   artifacts:
     paths:
-      - build/libs/*.jar
+      - main/build/libs/*.jar
   cache:
     key: "gonzalez"
     paths:
