--- a/main/src/main/resources/k8s/poker.yaml
+++ b/main/src/main/resources/k8s/poker.yaml
@@ -31,6 +31,9 @@ spec:
           ports:
             - containerPort: 8080
               name: web
+          env:
+            - name: SENTRY_DSN
+              value: https://3dec75f91b204fa1991b608ca3a2a9af@sentry.otd.rotate-it.be/2
 ---
 apiVersion: v1
 kind: Service
