--- a/build.gradle
+++ b/build.gradle
@@ -199,6 +199,8 @@ project(':main') {
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'io.sentry:sentry-spring:1.7.16'
+		implementation 'io.opentracing.contrib:opentracing-spring-jaeger-cloud-starter:0.2.2'
+		implementation 'io.opentracing.contrib:opentracing-spring-cloud-starter:0.2.2'
 		developmentOnly("org.springframework.boot:spring-boot-devtools")
 
 		implementation project(':app')
