--- a/main/src/main/resources/k8s/poker.yaml
+++ b/main/src/main/resources/k8s/poker.yaml
@@ -33,7 +33,7 @@ spec:
               name: web
           env:
             - name: SENTRY_DSN
-              value: https://3dec75f91b204fa1991b608ca3a2a9af@sentry.otd.rotate-it.be/2?stacktrace.app.packages=io.tripled
+              value: https://cc52ce6594d8493684160b3bfca59dfb@sentry.rotate-it.be/3?stacktrace.app.packages=io.tripled
             - name: OPENTRACING_JAEGER_HTTP-SENDER_URL
               value: http://jaeger-collector.jaeger:14268/api/traces
 ---
