--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,17 @@
 stages:
+  - uibuild
   - build
   - docker
   - deploy
+
+ui build:
+  stage: uibuild
+  image: yarnpkg/node-yarn:latest
+  script:
+    - yarn build
+  artifacts:
+    paths:
+      - poker-ui-app/build/*
 
 gradle build:
   stage: build
@@ -9,6 +19,7 @@ gradle build:
   variables:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true"
   script:
+    - mv poker-ui-app/build main/src/main/resources/public
     - gradle --build-cache --scan assemble check coverage detekt
     - 'cat ''build/reports/jacoco/coverage/html/index.html'' | sed -n ''s/.*Total[^%]*>\([0-9]*%\).*/Coverage: \1/pg'''
   coverage: /Coverage[^0-9]*([0-9]{1,3})%/
