refer to correct trace url

--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -62,7 +62,7 @@ opentracing:
     const-sampler:
       decision: true
     http-sender:
-      url: https://jaeger-collect.otd.rotate-it.be/api/traces
+      url: https://tracethis.rotate-it.be/api/traces
       #jaeger-collector.jaeger
     enabled: true
     log-spans: false
