--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ gradle build:
   variables:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true"
   script:
-    - cd poker-ui-app && gradle npm_run_build && cd ..
+    - cd poker-ui-app && gradle npm_install_create-react-kotlin-app && gradle npm_run_build && cd ..
     - mv poker-ui-app/build main/src/main/resources/public
     - gradle --build-cache --scan assemble check coverage detekt
     - 'cat ''build/reports/jacoco/coverage/html/index.html'' | sed -n ''s/.*Total[^%]*>\([0-9]*%\).*/Coverage: \1/pg'''
