--- a/poker-ui-app/package.json
+++ b/poker-ui-app/package.json
@@ -20,5 +20,10 @@
     "gen-idea-libs": "react-scripts-kotlin gen-idea-libs",
     "get-types": "react-scripts-kotlin get-types --dest=src/types",
     "postinstall": "npm run gen-idea-libs"
+  },
+  "performance": {
+    "hints": false,
+    "maxEntrypointSize": 512000,
+    "maxAssetSize": 512000
   }
 }
