--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ gradle build:
     - |
       cd  /tmp && \
       wget -k "https://github.com/JetBrains/kotlin/releases/download/v1.3.21/kotlin-compiler-1.3.21.zip"  && \
-      unzip "kotlin-compiler-${KOTLIN_VERSION}.zip" && \
+      unzip "kotlin-compiler-1.3.21.zip" && \
       mkdir -p "/usr/local/kotlin" && \
       mv "/tmp/kotlinc/bin" "/tmp/kotlinc/lib" "/usr/local/kotlin" && \
       rm /usr/local/kotlin/bin/*.bat && \
