--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,8 @@ gradle build:
       cd  /tmp && \
       wget -k "https://github.com/JetBrains/kotlin/releases/download/v1.3.21/kotlin-compiler-1.3.21.zip"  && \
       unzip "kotlin-compiler-1.3.21.zip" && \
-      mkdir -p "/usr/local/kotlin" && \
-      mv "/tmp/kotlinc/bin" "/tmp/kotlinc/lib" "/usr/local/kotlin" && \
       rm /usr/local/kotlin/bin/*.bat && \
-      chmod +x /usr/local/kotlin/bin/* && \
-      ln -s "/usr/local/kotlin/bin/"* "/usr/bin/"
+      chmod +x kotlinc/bin/* && export PATH=$PATH:`pwd`/kotlinc/bin && echo $PATH
     - cd poker-ui-app && gradle npm_install_create-react-kotlin-app && gradle npm_run_build && cd ..
     - cat /home/gradle/.npm/_logs/*.log
     - mv poker-ui-app/build main/src/main/resources/public
