add annotations to see if it fixes https://gitlab.com/gitlab-org/gitlab-ce/issues/57746#note_166703018

--- a/main/src/main/resources/k8s/poker.yaml
+++ b/main/src/main/resources/k8s/poker.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: poker
+  annotations:
+    app.gitlab.com/app: "poker"
+    app.gitlab.com/env: "production"
   labels:
     app: production
     release: production
