--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,30 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.40'
+		kotlinVersion = '1.3.41'
 		springBootVersion = '2.1.6.RELEASE'
 		junitVersion = '5.5.0'
+
+
 	}
-	repositories {
+    ext['kotlin.version'] = '1.3.41'
+
+    repositories {
 		mavenCentral()
 		jcenter()
 
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"){
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
+		}
+		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}"){
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
+		}
 	}
 }
 
@@ -111,6 +123,7 @@ configure(kotlinModules) {
 		implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 
 		implementation "org.jetbrains.kotlin:kotlin-stdlib"
+		implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
 		implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 		implementation "org.jetbrains.kotlin:kotlin-reflect"
 
@@ -118,7 +131,11 @@ configure(kotlinModules) {
 		testCompile("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
 		testCompile("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
 		testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-		testCompile "ch.tutteli.atrium:atrium-cc-en_GB-robstoll:0.8.0"
+		testCompile("ch.tutteli.atrium:atrium-cc-en_GB-robstoll:0.8.0"){
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
+			exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
+		}
 	}
 
 	dependencyManagement {
@@ -205,7 +222,7 @@ project(':main') {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
 		implementation 'io.sentry:sentry-spring:1.7.16'
-		implementation 'io.opentracing.contrib:opentracing-spring-jaeger-cloud-starter:0.3.2'
+		implementation 'io.opentracing.contrib:opentracing-spring-jaeger-cloud-starter:2.0.0'
 		implementation 'io.opentracing.contrib:opentracing-spring-cloud-starter:0.3.2'
 		developmentOnly("org.springframework.boot:spring-boot-devtools")
 
