--- a/build.gradle
+++ b/build.gradle
@@ -214,10 +214,11 @@ project(':infra-businessmetrics') {
 project(':infra-graphql') {
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
+		implementation 'org.springframework.boot:spring-boot-starter-webflux'
 		implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.10.0'
-		implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:5.10.0'
+		implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:5.6.0'
 		implementation 'com.graphql-java-kickstart:voyager-spring-boot-starter:5.10.0'
-		implementation 'com.expedia:graphql-kotlin:0.5.0'
+		implementation 'com.expedia:graphql-kotlin:0.6.0'
 
 		implementation project(':app')
 
