--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
 
 gradle build:
   stage: build
-  image: gradle:latest
+  image: gradle:5.5
   variables:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true"
     KOTLIN_VERSION: "1.3.41"
