--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.41'
-		springBootVersion = '2.1.6.RELEASE'
+		kotlinVersion = '1.3.50'
+		springBootVersion = '2.1.9.RELEASE'
 		junitVersion = '5.3.2'
 	}
-    ext['kotlin.version'] = '1.3.41'
+    ext['kotlin.version'] = '1.3.50'
 
     repositories {
 		mavenCentral()
@@ -244,6 +244,7 @@ project(':main') {
 	apply plugin: 'org.springframework.boot'
 
 	dependencies {
+		//implementation("com.okta.spring:okta-spring-boot-starter:1.2.1")
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
 		implementation 'io.sentry:sentry-spring:1.7.16'
