--- a/poker-ui-app/package.json
+++ b/poker-ui-app/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
-    "@jetbrains/kotlin-extensions": "^1.0.1-pre.67",
+    "@jetbrains/kotlin-extensions": "^1.0.1-pre.83",
     "axios": "^0.18.0",
     "create-react-kotlin-app": "^1.0.11",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "core-js": "^3.2.0",
+    "kotlin": "^1.3.50"
   },
   "devDependencies": {
-    "react-scripts-kotlin": "3.0.3"
+    "react-scripts-kotlin": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts-kotlin start",
