--- a/main/src/main/resources/k8s/poker.yaml
+++ b/main/src/main/resources/k8s/poker.yaml
@@ -45,7 +45,7 @@ spec:
               value: fn6xvjk4w7zt845rr5q7vcx4
             - name: ELASTIC_APM_APPLICATION_PACKAGES
               value: io.tripled
-            - name: ELASTIC_APM_SERVER_URL
+            - name: ELASTIC_APM_SERVER_URLS
               value: http://apm-server-quickstart-apm-http.default:8200
 
 ---
