--- a/main/src/main/resources/k8s/poker.yaml
+++ b/main/src/main/resources/k8s/poker.yaml
@@ -48,7 +48,7 @@ spec:
             - name: ELASTIC_APM_SERVER_URLS
               value: https://apm-server-quickstart-apm-http.default:8200
             - name: ELASTIC_APM_VERIFY_SERVER_CERT
-              value: false
+              value: "false"
 
 ---
 apiVersion: v1
