Update graphql dependencies in support of github issues (https://github.com/graphql-java-kickstart/graphql-spring-boot/issues/220) + initial JWT authorization/authenticaiton work for use with keycloak gatekeeper

--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -22,14 +22,14 @@ graphiql:
   mapping: /graphiql
   endpoint:
     graphql: /graphql
-    subscriptions: /subscriptions
+#    subscriptions: /subscriptions
   static:
     basePath: /
   enabled: true
   pageTitle: Open Triple D Poker - Graphiql
   cdn:
-    enabled: false
-#    version: 0.13.0
+    enabled: true
+    version: 0.17.5
   props:
     resources:
 #      query: query.graphql
