--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.61'
-		springBootVersion = '2.2.1.RELEASE'
+		kotlinVersion = '1.3.70'
+		springBootVersion = '2.2.5.RELEASE'
 		junitVersion = '5.5.2'
 	}
-    ext['kotlin.version'] = '1.3.61'
+    ext['kotlin.version'] = '1.3.70'
 
     repositories {
 		mavenCentral()
@@ -90,7 +90,7 @@ configure(kotlinModules) {
 	}
 
 	detekt {
-		toolVersion = "1.0.0-RC16"
+		toolVersion = "1.5.0"
 		input = files("src/main/kotlin")
 		filters = ".*/resources/.*,.*/build/.*"
 		config = files("./src/main/resources/quality/detekt.yml")
@@ -113,7 +113,7 @@ configure(kotlinModules) {
 	}
 
 	ext {
-		springBootVersion = '2.1.6.RELEASE'
+		springBootVersion = '2.2.5.RELEASE'
 		junitVersion = '5.3.2'
 	}
 
@@ -213,18 +213,20 @@ project(':infra-businessmetrics') {
 
 project(':infra-graphql') {
 	dependencies {
+		implementation 'com.auth0:java-jwt:3.4.0'
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-webflux'
-		implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:6.0.0'
-		implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:6.0.0'
-		implementation 'com.graphql-java-kickstart:altair-spring-boot-starter:6.0.0'
-		implementation 'com.graphql-java-kickstart:voyager-spring-boot-starter:6.0.0'
-		implementation 'com.expedia:graphql-kotlin:0.6.0'
+		implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:7.0.0'
+		implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:7.0.0'
+		implementation 'com.graphql-java-kickstart:altair-spring-boot-starter:7.0.0'
+		implementation 'com.graphql-java-kickstart:voyager-spring-boot-starter:7.0.0'
+		implementation 'com.expediagroup:graphql-kotlin-schema-generator:2.0.0-RC12.1'
 
 		implementation project(':app')
 
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:6.0.0'
+		testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:7.0.0'
 	}
 }
 
@@ -245,9 +247,9 @@ project(':main') {
 	apply plugin: 'org.springframework.boot'
 
 	dependencies {
-		//implementation("com.okta.spring:okta-spring-boot-starter:1.2.1")
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'io.sentry:sentry-spring:1.7.28'
 		implementation 'io.opentracing.contrib:opentracing-spring-jaeger-cloud-starter:2.0.3'
 		implementation 'io.opentracing.contrib:opentracing-spring-cloud-starter:0.3.7'
@@ -259,7 +261,7 @@ project(':main') {
         implementation project(":infra-graphql")
 
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:6.0.0'
+		testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:7.0.0'
 	}
 }
 
