graphql subscription working

--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -22,7 +22,7 @@ graphiql:
   mapping: /graphiql
   endpoint:
     graphql: /graphql
-#    subscriptions: /subscriptions
+    subscriptions: /subscriptions
   static:
     basePath: /
   enabled: true
