--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
 		kotlinVersion = '1.3.70'
-		springBootVersion = '2.2.5.RELEASE'
+		springBootVersion = '2.2.6.RELEASE'
 		junitVersion = '5.5.2'
 	}
     ext['kotlin.version'] = '1.3.70'
@@ -110,10 +110,13 @@ configure(kotlinModules) {
 	repositories {
 		mavenCentral()
 		jcenter()
+		maven {
+			url "https://oss.jfrog.org/artifactory/oss-snapshot-local"
+		}
 	}
 
 	ext {
-		springBootVersion = '2.2.5.RELEASE'
+		springBootVersion = '2.2.6.RELEASE'
 		junitVersion = '5.3.2'
 	}
 
@@ -217,16 +220,16 @@ project(':infra-graphql') {
 		implementation 'org.springframework.boot:spring-boot-starter-websocket'
 		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-webflux'
-		implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:7.0.0'
-		implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:7.0.0'
-		implementation 'com.graphql-java-kickstart:altair-spring-boot-starter:7.0.0'
-		implementation 'com.graphql-java-kickstart:voyager-spring-boot-starter:7.0.0'
+		implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:7.0.2-SNAPSHOT'
+		implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:7.0.2-SNAPSHOT'
+		implementation 'com.graphql-java-kickstart:altair-spring-boot-starter:7.0.2-SNAPSHOT'
+		implementation 'com.graphql-java-kickstart:voyager-spring-boot-starter:7.0.2-SNAPSHOT'
 		implementation 'com.expediagroup:graphql-kotlin-schema-generator:2.0.0-RC12.1'
 
 		implementation project(':app')
 
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:7.0.0'
+		testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:7.0.2-SNAPSHOT'
 	}
 }
 
